[gd_scene load_steps=16 format=2]

[ext_resource path="res://Roboto-Black.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Battlefield.gd" type="Script" id=2]
[ext_resource path="res://img/hourglass.png" type="Texture" id=3]
[ext_resource path="res://StartLabel.gd" type="Script" id=4]
[ext_resource path="res://img/sword.png" type="Texture" id=7]
[ext_resource path="res://img/shield.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=1]
size = 45
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=10]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.643252, 0.782391 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 127.264, 184.163 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "default"
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 127.264, 193.813 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 180.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = false
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.643252, 0.747679 ) ]
}

[sub_resource type="DynamicFont" id=5]
size = 102
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 45
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=7]
resource_name = "turn_attacker"
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 88, 237 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 180.0, 360.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.138184, 0.142578 ), Vector2( 0.15, 0.148 ) ]
}

[sub_resource type="DynamicFont" id=6]
size = 102
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=8]
resource_name = "turn_defender"
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 89, 237 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.291314, 0.271289 ), Vector2( 0.32, 0.282 ), Vector2( 0.291314, 0.271289 ) ]
}

[node name="Battlefield" type="Node2D"]
position = Vector2( 0, 3 )
script = ExtResource( 2 )

[node name="StartLabel" type="Label" parent="."]
margin_left = 1328.0
margin_top = 784.0
margin_right = 1622.0
margin_bottom = 842.0
rect_pivot_offset = Vector2( -25, 81 )
custom_fonts/font = SubResource( 1 )
text = "starts the turn"
script = ExtResource( 4 )

[node name="EndTurnLabel" type="Label" parent="."]
margin_left = 1674.0
margin_top = 898.0
margin_right = 1850.0
margin_bottom = 953.0
custom_fonts/font = SubResource( 1 )
text = "End turn"

[node name="EndTurnButton" type="Button" parent="."]
margin_left = 1614.0
margin_top = 587.011
margin_right = 1900.0
margin_bottom = 1018.01
rect_scale = Vector2( 0.428949, 0.392132 )
rect_pivot_offset = Vector2( 146.064, 220.424 )
custom_fonts/font = SubResource( 2 )
flat = true

[node name="Sprite" type="Sprite" parent="EndTurnButton"]
position = Vector2( 127.264, 184.163 )
rotation = 3.14159
scale = Vector2( 0.643252, 0.782391 )
texture = ExtResource( 3 )
offset = Vector2( 0, -4.08936 )

[node name="TurnAnimation" type="AnimationPlayer" parent="EndTurnButton/Sprite"]
anims/RESET = SubResource( 10 )
anims/default = SubResource( 9 )

[node name="AttackerScoring" type="Label" parent="."]
margin_left = 1382.0
margin_top = 336.0
margin_right = 1559.0
margin_bottom = 456.0
custom_fonts/font = SubResource( 5 )
text = "0"
align = 1

[node name="AttackerLabel" type="Label" parent="AttackerScoring"]
margin_left = 5.0
margin_top = 132.0
margin_right = 196.0
margin_bottom = 196.0
custom_fonts/font = SubResource( 4 )
text = "Attacker "

[node name="AttackerSprite" type="Sprite" parent="AttackerScoring"]
position = Vector2( 88, 237 )
scale = Vector2( 0.138184, 0.142578 )
texture = ExtResource( 7 )

[node name="WinnerAnimation" type="AnimationPlayer" parent="AttackerScoring/AttackerSprite"]
anims/turn_attacker = SubResource( 7 )

[node name="DefenderScoring" type="Label" parent="."]
margin_left = 1661.0
margin_top = 336.0
margin_right = 1838.0
margin_bottom = 481.0
custom_fonts/font = SubResource( 6 )
text = "0"
align = 1

[node name="DefenderLabel" type="Label" parent="DefenderScoring"]
margin_left = -2.0
margin_top = 135.0
margin_right = 185.0
margin_bottom = 190.0
custom_fonts/font = SubResource( 1 )
text = "Defender"

[node name="DefenderSprite" type="Sprite" parent="DefenderScoring"]
position = Vector2( 89, 237 )
scale = Vector2( 0.291314, 0.271289 )
texture = ExtResource( 8 )

[node name="WinnerAnimation" type="AnimationPlayer" parent="DefenderScoring/DefenderSprite"]
anims/turn_defender = SubResource( 8 )

[connection signal="pressed" from="EndTurnButton" to="." method="_on_EndTurnButton_pressed"]
