[gd_scene load_steps=18 format=2]

[ext_resource path="res://Roboto-Black.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/Battlefield.gd" type="Script" id=2]
[ext_resource path="res://img/hourglass.png" type="Texture" id=3]
[ext_resource path="res://scripts/StartLabel.gd" type="Script" id=4]
[ext_resource path="res://scripts/ExitGameButton.gd" type="Script" id=5]
[ext_resource path="res://img/sword.png" type="Texture" id=7]
[ext_resource path="res://img/shield.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=15]
size = 60
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=1]
size = 45
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 102
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 45
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 102
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=11]
size = 58
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=12]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("EndGameLabel:visible_characters")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 5 ]
}

[sub_resource type="Animation" id=13]
resource_name = "default"
length = 1.7
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("EndGameLabel:visible_characters")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8 ]
}

[sub_resource type="DynamicFont" id=14]
size = 61
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[node name="Battlefield" type="Node2D"]
position = Vector2( 0, 3 )
script = ExtResource( 2 )

[node name="StartLabel" type="Label" parent="."]
unique_name_in_owner = true
margin_left = 1378.0
margin_top = 722.0
margin_right = 1537.0
margin_bottom = 793.0
rect_pivot_offset = Vector2( -25, 81 )
custom_fonts/font = SubResource( 15 )
text = "starts"
script = ExtResource( 4 )

[node name="EndTurnLabel" type="Label" parent="."]
margin_left = 1684.0
margin_top = 861.0
margin_right = 1860.0
margin_bottom = 916.0
custom_fonts/font = SubResource( 1 )
text = "End turn"

[node name="EndTurnButton" type="Button" parent="."]
unique_name_in_owner = true
margin_left = 1624.0
margin_top = 550.011
margin_right = 1910.0
margin_bottom = 981.01
rect_scale = Vector2( 0.428949, 0.392132 )
rect_pivot_offset = Vector2( 127.264, 183.612 )
custom_fonts/font = SubResource( 2 )
flat = true

[node name="Sprite" type="Sprite" parent="EndTurnButton"]
position = Vector2( 127.264, 184.163 )
rotation = 3.14159
scale = Vector2( 0.643252, 0.782391 )
texture = ExtResource( 3 )
offset = Vector2( 0, -4.08936 )

[node name="AttackerScoring" type="Label" parent="."]
unique_name_in_owner = true
margin_left = 1392.0
margin_top = 299.0
margin_right = 1569.0
margin_bottom = 419.0
custom_fonts/font = SubResource( 5 )
text = "0"
align = 1

[node name="AttackerLabel" type="Label" parent="AttackerScoring"]
unique_name_in_owner = true
margin_left = 5.0
margin_top = 132.0
margin_right = 196.0
margin_bottom = 196.0
custom_fonts/font = SubResource( 4 )
text = "Attacker "

[node name="AttackerSprite" type="Sprite" parent="AttackerScoring"]
position = Vector2( 88, 237 )
scale = Vector2( 0.138184, 0.142578 )
texture = ExtResource( 7 )

[node name="DefenderScoring" type="Label" parent="."]
unique_name_in_owner = true
margin_left = 1671.0
margin_top = 299.0
margin_right = 1848.0
margin_bottom = 444.0
custom_fonts/font = SubResource( 6 )
text = "0"
align = 1

[node name="DefenderLabel" type="Label" parent="DefenderScoring"]
unique_name_in_owner = true
margin_left = -2.0
margin_top = 135.0
margin_right = 185.0
margin_bottom = 190.0
custom_fonts/font = SubResource( 1 )
text = "Defender"

[node name="DefenderSprite" type="Sprite" parent="DefenderScoring"]
position = Vector2( 89, 237 )
scale = Vector2( 0.291314, 0.271289 )
texture = ExtResource( 8 )

[node name="EndGameLabel" type="Label" parent="."]
unique_name_in_owner = true
margin_left = 1485.0
margin_top = 21.0
margin_right = 1806.0
margin_bottom = 90.0
rect_pivot_offset = Vector2( -1775, 551 )
custom_fonts/font = SubResource( 11 )
text = "Game over"
percent_visible = 0.625

[node name="WinnerAnimation" type="AnimationPlayer" parent="EndGameLabel"]
unique_name_in_owner = true
root_node = NodePath("../..")
anims/RESET = SubResource( 12 )
anims/default = SubResource( 13 )

[node name="WinnerLabel" type="Label" parent="."]
unique_name_in_owner = true
margin_left = 1509.0
margin_top = 123.0
margin_right = 1830.0
margin_bottom = 192.0
rect_pivot_offset = Vector2( -1775, 551 )
custom_fonts/font = SubResource( 11 )

[node name="ExitGameButton" type="Button" parent="."]
margin_left = 1462.0
margin_top = 954.0
margin_right = 1745.0
margin_bottom = 1032.0
custom_fonts/font = SubResource( 14 )
text = "Exit game"
script = ExtResource( 5 )

[connection signal="pressed" from="EndTurnButton" to="." method="_on_EndTurnButton_pressed"]
[connection signal="pressed" from="ExitGameButton" to="ExitGameButton" method="_on_ExitGameButton_pressed"]
